# cookiecutter-python

./: .cz.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  cookiecutter.json  makefile  pyproject.toml  taskfile.yml
.github/workflows/: release-please.yaml
hooks/: post_gen_project.py
tests/: test_project_generation.py  test_version.py
{{ cookiecutter.project_slug }}/: .cz.toml  .pre-commit-config.yaml  README.md  makefile  pyproject.toml
{{ cookiecutter.project_slug }}/.github/workflows/: release-please.yaml
{{ cookiecutter.project_slug }}/tests/: test_version.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: __init__.py  __main__.py  version.py
