[tool.poetry]
name = "cookiecutter-python"
version = "v2.0.7"
description = "Cookiecutter template for my python projects"
authors = ["Simao Ferreira <sferreira@tutamail.com>"]
license = ""
readme = "README.md"
keywords = ["cookiecutter", "python"]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.2"
cookiecutter = "^2.4.0"
toml = "^0.10.2"
pytest-cookies = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_customize"
tag_format = "v$major.$minor.$patch"
version_scheme = "semver"
version = "2.0.7"
update_changelog_on_bump = true
version_files = ["pyproject.toml"]

[tool.commitizen.customize]
message_template = "{{change_type}}:{% if show_message %} {{message}}{% endif %}"
example = "feature: this feature enable customize through config file"
schema = "<type>: <body>"
schema_pattern = "(bump|break|feat|chore|docs|fix):(\\s.*)"
bump_pattern = "^(bump|break|feat|chore|fix)"
bump_map = { "break" = "MAJOR", "feat" = "MINOR", "fix" = "PATCH", "chore" = "PATCH", "docs" = "PATCH" }
change_type_order = ["break", "feat", "fix", "chore", "docs"]
info_path = "cz_customize_info.txt"
info = """
This is customized info
"""
commit_parser = "^(?P<change_type>break|feat|chore|docs|fix):\\s(?P<message>.*)?"
changelog_pattern = "^(break|feat|chore|docs|fix)?(!)?"
change_type_map = { "break" = "Breaking Change", "feat" = "Feature", "fix" = "Fix", "chore" = "Patch", "docs" = "Patch" }

[tool.pytest.ini_options]
testpaths = 'tests'
