[tool.poetry]
name = "cookiecutter-python"
version = "v2.0.10"
description = "Cookiecutter template for my python projects"
authors = ["Itzalak <itzalak@tuta.io>"]
license = ""
readme = "README.md"
keywords = ["cookiecutter", "python"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
cookiecutter = "^2.6.0"
toml = "^0.10.2"
pytest-cookies = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_customize"
tag_format = "v$major.$minor.$patch"
version_scheme = "semver"
version = "2.0.10"
update_changelog_on_bump = true
version_files = ["pyproject.toml"]

[tool.commitizen.customize]
schema = "<type>: <body>"
schema_pattern = "(bump|break|feat|chore|tools|docs|fix):(\\s.*)"
bump_pattern = "^(bump|break|feat|tools|fix|chore)"
bump_map = { "break" = "MAJOR", "feat" = "MINOR", "fix" = "PATCH", "tools" = "PATCH", "chore" = "PATCH", "docs" = "PATCH" }
change_type_order = ["break", "feat", "fix", "tools", "chore", "docs"]
commit_parser = "^(?P<change_type>break|feat|chore|tools|docs|fix):\\s(?P<message>.*)?"
changelog_pattern = "^(break|feat|chore|tools|docs|fix)?(!)?"
change_type_map = { "break" = "Breaking Change", "feat" = "Changed", "fix" = "Fixed", "tools" = "Tools", "chore" = "Changed", "docs" = "Notes" }

[tool.pytest.ini_options]
testpaths = 'tests'
